# LearnCMake_Labs

./: CMakeLists.txt
hello/: CMakeLists.txt  main.cpp
include/: lower.h  upper.h  useless.h
lower/: CMakeLists.txt  lower.cpp
upper/: CMakeLists.txt  upper.cpp
useless/: CMakeLists.txt  messages.cpp  messages.h  useless.cpp
